--- a/css/style.css
+++ b/css/style.css
@@ -7,4 +7,18 @@
 body {
     background-color: black;
     color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#app {
+    text-align: center;
+    margin-top: 3rem;
+}
+
+h1 {
+    margin-bottom: 1rem;
+}
+
+#taskList {
+    margin-top: 2rem;
 }
